--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,8 @@
   <body class="container">
     <h1 class="text-center mt-5">Welcome!</h1>
     <div class="alert alert-danger" id="error" role="alert"></div>
+    <!-- alert -->
+
     <div class="row mt-5">
       <div class="col">
         <div class="input-group">
